--- a/footer.scss
+++ b/footer.scss
@@ -94,3 +94,27 @@
           }
       }
   }
+  .divider{
+      display: flex;
+      justify-content: center;
+      .line{
+      width:80vw;
+      height: 1.5px;
+      background: #ddd;
+      text-align: center;
+      margin-bottom: 5%;
+      }
+  }
+
+//////////////////////////////////Breakpoints//////////////////////////////////
+@media (max-width: 760px) {
+    .black{
+        flex-wrap: wrap;
+        .text,.image{
+            width:100% !important;
+        }
+        .text{
+            margin-top: 0 !important;
+        }
+    }
+}
