--- a/footer.css
+++ b/footer.css
@@ -171,11 +171,9 @@ main .ad img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   gap: 10%;
-  padding: 2% 0;
+  padding: 5% 0;
+  margin-top: 8%;
 }
 
 .footer .social-icons .logo {
@@ -273,6 +271,11 @@ main .ad img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  footer .media {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
