--- a/footer.scss
+++ b/footer.scss
@@ -122,9 +122,9 @@
         justify-content: center;
         .media{
             display: flex;
-            justify-content: center;
             gap:10%;
-            padding: 2% 0;
+            padding: 5% 0;
+            margin-top: 8%;
         }
         .logo{
             display: flex;
@@ -199,8 +199,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        button{
-            
+        .media{
+            justify-content: center;
         }
         .navigation{
             flex-wrap: wrap;
