--- a/footer.scss
+++ b/footer.scss
@@ -112,7 +112,7 @@
   }
 
 .footer{
-    padding: 0% 10%;
+    padding: 0% 10% 5% 10%;
     display: flex;
     .social-icons{
         display: flex;
