--- a/footer.scss
+++ b/footer.scss
@@ -205,6 +205,7 @@
         .navigation{
             flex-wrap: wrap;
             justify-content: center;
+            gap:20%;
             .title{
                 padding: 2% 0;
             }
