--- a/styles.css
+++ b/styles.css
@@ -652,6 +652,7 @@ main .influencers .image img{
   }
   .header{
   font-size: calc(var(--fs-header) + .4rem) !important;
+  line-height: calc(var(--fs-header) + .4rem) !important;
 
   }
 }
