--- a/footer.scss
+++ b/footer.scss
@@ -189,6 +189,9 @@
     main .hero{
         padding-top: 30%;
     }
+    .hide{
+        display: none;
+    }
     
 }
 @media (max-width:920px) {
