--- a/footer.scss
+++ b/footer.scss
@@ -40,7 +40,7 @@
 
           .text{
               width:50%;
-              background: rgb(34, 34, 34);
+              background: #1f1f1f;
               align-self: stretch;
                 margin-top: 3.5vw;
                 padding: 7% 0;
@@ -78,7 +78,7 @@
               width: 50%;
               display: flex;
               justify-content: center;
-              background: rgb(51, 51, 51);
+              background: #363636;
               border-right: 1px solid silver;
               padding-bottom: 7%;
 
